Fixed bug #12464: Slider element is not always visible during the dragging process..
git-svn-id: https://svn.typo3.org/TYPO3v4/CoreProjects/workspaces/workspaces/trunk@3980 743128fe-103e-dd11-99c4-001b210b3e58

--- a/typo3/sysext/workspaces/Resources/Public/StyleSheet/preview.css
+++ b/typo3/sysext/workspaces/Resources/Public/StyleSheet/preview.css
@@ -122,7 +122,7 @@ ul.x-tab-strip-top {
 	width: 7px;
 }
 
-.x-slider-horz .x-slider-thumb-over {
+.x-slider-horz .x-slider-thumb-over, .x-slider-horz .x-slider-thumb-drag {
 	background-position: -7px -21px;
 }
 
